--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-loader-spinner": "^6.1.6",
+    "react-loader-spinner": "^4.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
