--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.26.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "yup-password": "^0.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
